# dag_simple

./: README.md  pyproject.toml
src/dag_simple/: __init__.py  execution.py
tests/: process_nodes.py  test_dag_simple.py  test_process_execution.py
